--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div class="container">
         <div class="row d-flex">
           <div class="col-md-6 order-md-last heading-section pl-md-5 ftco-animate">
-          	<h2 class="mb-4">It's time to start your adventure</h2>
+          	<h2 class="mb-4">Explore the World around us !</h2>
             <p>We live in a wonderful world that is full of beauty, charm and adventure. There is no end to the adventures that we can have if only we seek them with our eyes open.</p>
             <p>We live in a world full of beauty, charm, and adventure. There is no end to the adventures that we can have if only we seek them with our eyes open.</p>
             <p>The use of traveling is to regulate imagination with reality, and instead of thinking of how things may be, see them as they are.</p>
@@ -103,19 +103,19 @@
           	<div class="row">
           		<div class="col-md-6 d-flex align-self-stretch ftco-animate">
 		            <div class="media block-6 services d-block">
-		              <div class="icon"><span class="flaticon-paragliding"></span></div>
+		              <div class="icon"><span class="flaticon-mountains"></span></div>
 		              <div class="media-body">
-		                <h3 class="heading mb-3">Activities</h3>
+		                <h3 class="heading mb-3">Adventures</h3>
 		                <p>The best part of your vacation
-Join the millions of travelers who make the most of their vacations through Destination tours & activities</p>
+Join the millions of travelers who make the most of their vacations through Destination tours & adventures</p>
 		              </div>
 		            </div>      
 		          </div>
 		          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
 		            <div class="media block-6 services d-block">
-		              <div class="icon"><span class="flaticon-route"></span></div>
+		              <div class="icon"><span class="flaticon-map"></span></div>
 		              <div class="media-body">
-		                <h3 class="heading mb-3">Travel Arrangements</h3>
+		                <h3 class="heading mb-3">Itinerary</h3>
 		                <p>We find and compare prices for flights, hotels and rental cars in real time, so you can get cheap, fast and good deals on your travels</p>
 		              </div>
 		            </div>    
@@ -131,9 +131,9 @@ Join the millions of travelers who make the most of their vacations through Dest
 		          </div>
 		          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
 		            <div class="media block-6 services d-block">
-		              <div class="icon"><span class="flaticon-map"></span></div>
+		              <div class="icon"><span class="flaticon-route"></span></div>
 		              <div class="media-body">
-		                <h3 class="heading mb-3">Explore</h3>
+		                <h3 class="heading mb-3">Discover the world</h3>
 		                <p>Experience once-in-a-lifetime everyday on an Destination tour. On our trips you'll be guided by a local leader with expert knowledge about the destination</p>
 		              </div>
 		            </div>      
