added text to about

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 		          </div>
 		          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
 		            <div class="media block-6 services d-block">
-		              <div class="icon"><span class="flaticon-tour-guide"></span></div>
+		              <div class="icon"><span class="flaticon-compass"></span></div>
 		              <div class="media-body">
 		                <h3 class="heading mb-3">Private Guide</h3>
 		                <p>For over 35 years, Destination has provided expert travel advice and can now plan and book tailor-made trips for its independent-minded travellers.</p>
@@ -131,7 +131,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 		          </div>
 		          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
 		            <div class="media block-6 services d-block">
-		              <div class="icon"><span class="flaticon-route"></span></div>
+		              <div class="icon"><span class="flaticon-around"></span></div>
 		              <div class="media-body">
 		                <h3 class="heading mb-3">Discover the world</h3>
 		                <p>Experience once-in-a-lifetime everyday on an Destination tour. On our trips you'll be guided by a local leader with expert knowledge about the destination</p>
@@ -217,13 +217,13 @@ Join the millions of travelers who make the most of their vacations through Dest
     			<div class="col-md-6 pl-md-5 py-5">
     				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
-		            <h2 class="mb-4">Make Your Tour Memorable and Safe With Us</h2>
+		            <h2 class="mb-4">Make Your Tour Memorable With Us !</h2>
 		            <p> We create unforgettable memories by ensuring that everywhere you go has local character, tasteful settings, and provides a unique story.</p>
 		          </div>
 		        </div>
 		    		<div class="row">
 		          <div class="col-md-4 justify-content-center counter-wrap ftco-animate">
-		            <div class="block-18 text-center mb-4">
+		            <div class="block-19 text-center py-5 bg-light mb-5">
 		              <div class="text">
 		                <strong class="number" data-number="400">0</strong>
 		                <span>Successful Tours</span>
@@ -231,21 +231,21 @@ Join the millions of travelers who make the most of their vacations through Dest
 		            </div>
 		          </div>
 		          <div class="col-md-4 justify-content-center counter-wrap ftco-animate">
-		            <div class="block-18 text-center mb-4">
+		            <div class="block-19 text-center py-5 bg-light mb-5">
 		              <div class="text">
-		                <strong class="number" data-number="24000">0</strong>
-		                <span>Happy Tourist</span>
+		                <strong class="number" data-number="2400">0</strong>
+		                <span>Happy Costumers</span>
 		              </div>
 		            </div>
 		          </div>
 		          <div class="col-md-4 justify-content-center counter-wrap ftco-animate">
-		            <div class="block-18 text-center mb-4">
+		            <div class="block-19 text-center py-5 bg-light mb-5">
 		              <div class="text">
-		                <strong class="number" data-number="200">0</strong>
-		                <span>Place Explored</span>
+		                <strong class="number" data-number="30">0</strong>
+		                <span>Amazing Deals</span>
 		              </div>
 		            </div>
-		          </div>
+		          
 		        </div>
 	        </div>
         </div>
@@ -415,7 +415,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 		<section class="ftco-section ftco-no-pb ftco-no-pt">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-12 mb-5">
+					<div class="col-md-12 mb-5  ">
 						<div class="discount-offer-content text-center">
 							<h2>Book before 23 December 2020 and get upto 25% Discount !</h2>
                             	<div class=" col-lg align-items-end">
