--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 		          </div>
 		          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
 		            <div class="media block-6 services d-block">
-		              <div class="icon"><span class="flaticon-compass"></span></div>
+		              <div class="icon"><span class="flaticon-paragliding"></span></div>
 		              <div class="media-body">
 		                <h3 class="heading mb-3">Private Guide</h3>
 		                <p>For over 35 years, Destination has provided expert travel advice and can now plan and book tailor-made trips for its independent-minded travellers.</p>
@@ -412,7 +412,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 
     
 		<!--discount-offer start-->
-		<section class="ftco-section ftco-no-pb ftco-no-pt">
+		<section class="ftco-section ftco-no-pb ftco-no-pt bg-light">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 mb-5  ">
