--- a/about.html
+++ b/about.html
@@ -66,35 +66,37 @@
       <div class="container">
         <div class="row d-flex">
           <div class="col-md-6 order-md-last heading-section pl-md-5 ftco-animate">
-          	<h2 class="mb-4">It's time to start your adventure</h2>
+          	<h2 class="mb-4">Explore the World around us !</h2>
             <p>We live in a wonderful world that is full of beauty, charm and adventure. There is no end to the adventures that we can have if only we seek them with our eyes open.</p>
             <p>We live in a world full of beauty, charm, and adventure. There is no end to the adventures that we can have if only we seek them with our eyes open.</p>
             <p>The use of traveling is to regulate imagination with reality, and instead of thinking of how things may be, see them as they are.</p>
           </div>
+
+
           <div class="col-md-6">
           	<div class="row">
           		<div class="col-md-6 d-flex align-self-stretch ftco-animate">
 		            <div class="media block-6 services d-block">
-		              <div class="icon"><span class="flaticon-paragliding"></span></div>
+		              <div class="icon"><span class="flaticon-mountains"></span></div>
 		              <div class="media-body">
-		                <h3 class="heading mb-3">Activities</h3>
+		                <h3 class="heading mb-3">Adventures</h3>
 		                <p>The best part of your vacation
-Join the millions of travelers who make the most of their vacations through Destination tours & activities</p>
+Join the millions of travelers who make the most of their vacations through Destination tours & adventures</p>
 		              </div>
 		            </div>      
 		          </div>
 		          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
 		            <div class="media block-6 services d-block">
-		              <div class="icon"><span class="flaticon-route"></span></div>
+		              <div class="icon"><span class="flaticon-map"></span></div>
 		              <div class="media-body">
-		                <h3 class="heading mb-3">Travel Arrangements</h3>
+		                <h3 class="heading mb-3">Itinerary</h3>
 		                <p>We find and compare prices for flights, hotels and rental cars in real time, so you can get cheap, fast and good deals on your travels</p>
 		              </div>
 		            </div>    
 		          </div>
 		          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
 		            <div class="media block-6 services d-block">
-		              <div class="icon"><span class="flaticon-tour-guide"></span></div>
+		              <div class="icon"><span class="flaticon-paragliding"></span></div>
 		              <div class="media-body">
 		                <h3 class="heading mb-3">Private Guide</h3>
 		                <p>For over 35 years, Destination has provided expert travel advice and can now plan and book tailor-made trips for its independent-minded travellers.</p>
@@ -103,9 +105,9 @@ Join the millions of travelers who make the most of their vacations through Dest
 		          </div>
 		          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
 		            <div class="media block-6 services d-block">
-		              <div class="icon"><span class="flaticon-map"></span></div>
+		              <div class="icon"><span class="flaticon-around"></span></div>
 		              <div class="media-body">
-		                <h3 class="heading mb-3">Explore</h3>
+		                <h3 class="heading mb-3">Discover the world</h3>
 		                <p>Experience once-in-a-lifetime everyday on an Destination tour. On our trips you'll be guided by a local leader with expert knowledge about the destination</p>
 		              </div>
 		            </div>      
@@ -115,6 +117,7 @@ Join the millions of travelers who make the most of their vacations through Dest
         </div>
       </div>
     </section>
+
 
    
 
@@ -189,13 +192,13 @@ Join the millions of travelers who make the most of their vacations through Dest
     			<div class="col-md-6 pl-md-5 py-5">
     				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
-		            <h2 class="mb-4">Make Your Tour Memorable and Safe With Us</h2>
+		            <h2 class="mb-4">Make Your Tour Memorable With Us !</h2>
 		            <p> We create unforgettable memories by ensuring that everywhere you go has local character, tasteful settings, and provides a unique story.</p>
 		          </div>
 		        </div>
 		    		<div class="row">
 		          <div class="col-md-4 justify-content-center counter-wrap ftco-animate">
-		            <div class="block-18 text-center mb-4">
+		            <div class="block-19 text-center py-5 bg-light mb-5">
 		              <div class="text">
 		                <strong class="number" data-number="400">0</strong>
 		                <span>Successful Tours</span>
@@ -203,21 +206,21 @@ Join the millions of travelers who make the most of their vacations through Dest
 		            </div>
 		          </div>
 		          <div class="col-md-4 justify-content-center counter-wrap ftco-animate">
-		            <div class="block-18 text-center mb-4">
+		            <div class="block-19 text-center py-5 bg-light mb-5">
 		              <div class="text">
-		                <strong class="number" data-number="24000">0</strong>
-		                <span>Happy Tourist</span>
+		                <strong class="number" data-number="2400">0</strong>
+		                <span>Happy Costumers</span>
 		              </div>
 		            </div>
 		          </div>
 		          <div class="col-md-4 justify-content-center counter-wrap ftco-animate">
-		            <div class="block-18 text-center mb-4">
+		            <div class="block-19 text-center py-5 bg-light mb-5">
 		              <div class="text">
-		                <strong class="number" data-number="200">0</strong>
-		                <span>Place Explored</span>
+		                <strong class="number" data-number="30">0</strong>
+		                <span>Amazing Deals</span>
 		              </div>
 		            </div>
-		          </div>
+		          
 		        </div>
 	        </div>
         </div>
