--- a/Vacation.html
+++ b/Vacation.html
@@ -723,6 +723,27 @@
     
 <!--end of tour destinations-->
 
+<!--subscription-->
+ <section class="ftco-section ftco-no-pt">
+<div class="container">
+          <div class="row d-flex justify-content-center">
+            <div class="col-md-10 text-wrap text-center heading-section ftco-animate">
+              <h2>Subscribe to our Newsletter</h2>
+              <div class="row d-flex justify-content-center mt-4 mb-4">
+                <div class="col-md-10">
+                  <form action="#" class="subscribe-form">
+                    <div class="form-group d-flex">
+                      <input type="text" class="form-control" placeholder="Enter email address">
+                      <input type="submit" value="Subscribe" class="submit px-3">
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+ </section>
+
    <!--footer-->
     <footer class="ftco-footer bg-bottom" style="background-image: url(assets/images/footer-bg.jpg);">
       <div class="container">
