--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 		          </div>
 		          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
 		            <div class="media block-6 services d-block">
-		              <div class="icon"><span class="flaticon-paragliding"></span></div>
+		              <div class="icon"><span class="flaticon-route"></span></div>
 		              <div class="media-body">
 		                <h3 class="heading mb-3">Private Guide</h3>
 		                <p>For over 35 years, Destination has provided expert travel advice and can now plan and book tailor-made trips for its independent-minded travellers.</p>
@@ -105,7 +105,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 		          </div>
 		          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
 		            <div class="media block-6 services d-block">
-		              <div class="icon"><span class="flaticon-around"></span></div>
+		              <div class="icon"><span class="flaticon-paragliding"></span></div>
 		              <div class="media-body">
 		                <h3 class="heading mb-3">Discover the world</h3>
 		                <p>Experience once-in-a-lifetime everyday on an Destination tour. On our trips you'll be guided by a local leader with expert knowledge about the destination</p>
@@ -227,6 +227,27 @@ Join the millions of travelers who make the most of their vacations through Dest
     	</div>
     </section>
     <!--end of about-->
+
+    <!--subscription-->
+ <section class="ftco-section ftco-no-pt">
+<div class="container">
+          <div class="row d-flex justify-content-center">
+            <div class="col-md-10 text-wrap text-center heading-section ftco-animate">
+              <h2>Subscribe to our Newsletter</h2>
+              <div class="row d-flex justify-content-center mt-4 mb-4">
+                <div class="col-md-10">
+                  <form action="#" class="subscribe-form">
+                    <div class="form-group d-flex">
+                      <input type="text" class="form-control" placeholder="Enter email address">
+                      <input type="submit" value="Subscribe" class="submit px-3">
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+ </section>
     
 
     <!---testimony-->
