--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 		          </div>
 		          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
 		            <div class="media block-6 services d-block">
-		              <div class="icon"><span class="flaticon-paragliding"></span></div>
+		              <div class="icon"><span class="flaticon-route"></span></div>
 		              <div class="media-body">
 		                <h3 class="heading mb-3">Private Guide</h3>
 		                <p>For over 35 years, Destination has provided expert travel advice and can now plan and book tailor-made trips for its independent-minded travellers.</p>
@@ -131,7 +131,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 		          </div>
 		          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
 		            <div class="media block-6 services d-block">
-		              <div class="icon"><span class="flaticon-around"></span></div>
+		              <div class="icon"><span class="flaticon-paragliding"></span></div>
 		              <div class="media-body">
 		                <h3 class="heading mb-3">Discover the world</h3>
 		                <p>Experience once-in-a-lifetime everyday on an Destination tour. On our trips you'll be guided by a local leader with expert knowledge about the destination</p>
