added book form,js to slider in form ,stylesto form

--- a/book.html
+++ b/book.html
@@ -63,6 +63,73 @@
     </section>
     <!--end of hero image-->
 
+<!--book a trip-->
+    <section class="ftco-section">
+     <div class="container">
+    <div class="row mt-2 ">
+      <div class="col-md-7 mt-text text-white align-self-center mb-2">
+      <div class="filtr-item">
+		<img src="assets/images/book2.jpg" alt="portfolio image"/>
+      </div>
+      </div>
+      <div class="col-md-5 col-md-push-1">
+        <div class=" form-card">
+          <h3>Book Your Trip</h3>
+          <form action="#">
+            <div class="row form-group">
+              <div class="col-md-12">
+                <label for="destination">Destination</label>
+                <input type="text" name="destination" id="destination" class="form-control">
+              </div>
+            </div>
+            <div class="row form-group">
+              <div class="col-md-12">
+                <label for="activities">Activities</label>
+                <select name="#" id="activities" class="form-control">
+										<option value="">All</option>
+										<option value="">Activities</option>
+										<option value="">Hiking</option>
+										<option value="">Paraglidding</option>
+										<option value="">Swimming</option>
+									</select>
+              </div>
+            </div>
+
+            <div class="row form-group">
+              <div class="col-md-6">
+                <label for="mintopay">Check in</label>
+                <p>
+                  <input type="date" name="checkin" id="checkin" class="form-control">
+                </p>
+              </div>
+              <div class="col-md-6">
+                <label for="maxtopay">Check out</label>
+                <p>
+                  <input type="date" name="checkout" id="checkout" class="form-control">
+                </p>
+              </div>
+            </div>
+            <div class="row form-group">
+              <div class="col-md-12">
+                <label for="date-start">Price Range</label>: £
+                <span id="price" class="price">1000</span>
+                <input type="range" min="23" max="1000" value="1000" class="slider" id="myRange">
+                </p>
+              </div>
+            </div>
+            <div class="row form-group">
+              <div class="col-md-12">
+               <input type="submit" value="Search" class="form-control btn btn-primary">
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+    </section>
+
     
     <!--footer-->
     <footer class="ftco-footer bg-bottom" style="background-image: url(assets/images/footer-bg.jpg);">
