changed image of book a trip

--- a/book.html
+++ b/book.html
@@ -68,9 +68,7 @@
      <div class="container">
     <div class="row mt-2 ">
       <div class="col-md-7 mt-text text-white align-self-center mb-2">
-      <div class="filtr-item">
-		<img src="assets/images/book2.jpg" alt="portfolio image"/>
-      </div>
+		<img src="assets/images/book3.jpg" alt="portfolio image"/>
       </div>
       <div class="col-md-5 col-md-push-1">
         <div class=" form-card">
@@ -128,7 +126,7 @@
     </div>
   </div>
 </section>
-    </section>
+ <!--end of booktrip-->   
 
     
     <!--footer-->
