--- a/Vacation.html
+++ b/Vacation.html
@@ -669,7 +669,7 @@
  </section>
 
    <!--footer-->
-    <footer class="ftco-footer bg-bottom" style="background-image: url(assets/images/footer-bg.jpg);">
+    <footer class="ftco-footer bg-bottom" style="background-image: url(assets/images/footer.png);">
       <div class="container">
         <div class="row mb-5">
           <div class="col-md">
