--- a/book.html
+++ b/book.html
@@ -130,7 +130,7 @@
 
     
     <!--footer-->
-    <footer class="ftco-footer bg-bottom" style="background-image: url(assets/images/footer-bg.jpg);">
+    <footer class="ftco-footer bg-bottom" style="background-image: url(assets/images/footer.png);">
       <div class="container">
         <div class="row mb-5">
           <div class="col-md">
