--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ We did not have to worry about a thing.  It was a perfect trip that we will alwa
     <!--end of testimony-->
 
     <!--footer-->
-    <footer class="ftco-footer bg-bottom" style="background-image: url(assets/images/footer-bg.jpg);">
+    <footer class="ftco-footer bg-bottom" style="background-image: url(assets/images/footer.png);">
       <div class="container">
         <div class="row mb-5">
           <div class="col-md">
