--- a/book.html
+++ b/book.html
@@ -109,7 +109,7 @@
             </div>
             <div class="row form-group">
               <div class="col-md-12">
-                <label for="date-start">Price Range</label>: £
+                <label for="date-start">Price Range</label>: $
                 <span id="price" class="price">1000</span>
                 <input type="range" min="23" max="1000" value="1000" class="slider" id="myRange">
                 </p>
