alterd format and changed testimony

--- a/index.html
+++ b/index.html
@@ -97,21 +97,18 @@
             <p>We live in a world full of beauty, charm, and adventure. There is no end to the adventures that we can have if only we seek them with our eyes open.</p>
             <p>The use of traveling is to regulate imagination with reality, and instead of thinking of how things may be, see them as they are.</p>
           </div>
-
-
           <div class="col-md-6">
           	<div class="row">
-          		<div class="col-md-6 d-flex align-self-stretch ftco-animate">
+          	<div class="col-md-6 d-flex align-self-stretch ftco-animate">
 		            <div class="media block-6 services d-block">
 		              <div class="icon"><span class="flaticon-mountains"></span></div>
 		              <div class="media-body">
 		                <h3 class="heading mb-3">Adventures</h3>
-		                <p>The best part of your vacation
-Join the millions of travelers who make the most of their vacations through Destination tours & adventures</p>
+		                <p>The best part of your vacation Join the millions of travelers who make the most of their vacations through Destination tours & adventures</p>
 		              </div>
 		            </div>      
 		          </div>
-		          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+		    <div class="col-md-6 d-flex align-self-stretch ftco-animate">
 		            <div class="media block-6 services d-block">
 		              <div class="icon"><span class="flaticon-map"></span></div>
 		              <div class="media-body">
@@ -120,7 +117,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 		              </div>
 		            </div>    
 		          </div>
-		          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+		    <div class="col-md-6 d-flex align-self-stretch ftco-animate">
 		            <div class="media block-6 services d-block">
 		              <div class="icon"><span class="flaticon-route"></span></div>
 		              <div class="media-body">
@@ -129,7 +126,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 		              </div>
 		            </div>      
 		          </div>
-		          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+		    <div class="col-md-6 d-flex align-self-stretch ftco-animate">
 		            <div class="media block-6 services d-block">
 		              <div class="icon"><span class="flaticon-paragliding"></span></div>
 		              <div class="media-body">
@@ -160,8 +157,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 						<div class="feature-details">
 							<h5>Desert Riding  <br>
 								adventures</h5>
-							<p>
-								Join a group of adventure-seekers for 11 days as they travel  the world's largest sand desert on camel back.</p>
+							<p>Join a group of adventure-seekers for 11 days as they travel  the world's largest sand desert on camel back.</p>
 							<a href="#" class="primary-btn mb-40">Read More</a>
 						</div>
 						<div class="feature-thumb">
@@ -175,9 +171,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 						<div class="feature-details">
 							<h5>Relaxation in the <br>
 								Local Beach Campfire</h5>
-							<p>
-								There's nothing better than gathering around a big beach bonfire after a day of swimming, surfing or sunbathing.
-							</p>
+							<p>There's nothing better than gathering around a big beach bonfire after a day of swimming, surfing or sunbathing.</p>
 							<a href="#" class="primary-btn mb-40">Read More</a>
 						</div>
 						<div class="feature-thumb">
@@ -189,11 +183,8 @@ Join the millions of travelers who make the most of their vacations through Dest
 				<div class="col-lg-4 col-md-6">
 					<div class="single-feature">
 						<div class="feature-details">
-							<h5>Forest Exploration <br>
-								Rainforest</h5>
-							<p>
-								Explore the oldest protected Rainforest in the western hemisphere. Experience the wonderful world of this ancient creation.
-							</p>
+							<h5>Forest Exploration <br>Rainforest</h5>
+							<p>Explore the oldest protected Rainforest in the western hemisphere. Experience the wonderful world of this ancient creation.</p>
 							<a href="#" class="primary-btn mb-40">Read More</a>
 						</div>
 						<div class="feature-thumb">
@@ -213,12 +204,8 @@ Join the millions of travelers who make the most of their vacations through Dest
 			<div class="container">
 				<div class="gallery-details">
 					<div class="gallary-header text-center">
-						<h2>
-							Top destinations!
-						</h2>
-						<p>
-						You can't miss these top attractions .   
-						</p>
+						<h2>Top destinations!</h2>
+						<p>You can't miss these top attractions .</p>
 					</div>
 					<div class="gallery-box">
 						<div class="gallery-content">
@@ -229,9 +216,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 						  				<div class="filtr-item">
 											<img src="assets/images/india.jpg" alt="portfolio image"/>
 											<div class="item-title">
-												<a href="#">
-													India
-												</a>
+												<a href="#">India</a>
 												<p><span>20 tours</span></p>
                                                 <p><span>15 places</span></p>
 											</div>
@@ -242,9 +227,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 						  				<div class="filtr-item">
 											<img src="assets/images/london.jpg" alt="portfolio image"/>
 											<div class="item-title">
-												<a href="#">
-													London
-												</a>
+												<a href="#">London</a>
 												<p><span>12 tours</span></p>
                                                 <p><span>9 places</span></p>
 											</div> 
@@ -255,9 +238,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 						  				<div class="filtr-item">
 											<img src="assets/images/egypt.jpg" alt="portfolio image"/>
 											<div class="item-title">
-												<a href="#">
-													Egypt
-												</a>
+												<a href="#">Egypt</a>
 												<p><span>25 tours</span></p>
                                                 <p><span>10 places</span></p>
 											</div>
@@ -268,9 +249,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 						  				<div class="filtr-item">
 											<img src="assets/images/maldives.jpg" alt="portfolio image"/>
 											<div class="item-title">
-												<a href="#">
-													Maldives
-												</a>
+												<a href="#">Maldives</a>
 												<p><span>10 tours</span></p>
                                                 <p><span>9 places</span></p>
 											</div> 
@@ -281,9 +260,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 						  				<div class="filtr-item">
 											<img src="assets/images/australia.jpg" alt="portfolio image"/>
 											<div class="item-title">
-												<a href="#">
-													Australia
-												</a>
+												<a href="#">Australia</a>
 												<p><span>14 tours</span></p>
                                                 <p><span>12 places</span></p>
 											</div> 
@@ -294,22 +271,18 @@ Join the millions of travelers who make the most of their vacations through Dest
 						  				<div class="filtr-item">
 											<img src="assets/images/japan.jpg" alt="portfolio image"/>
 											<div class="item-title">
-												<a href="#">
-													Japan
-												</a>
+												<a href="#">Japan</a>
 												<p><span>10 tours</span></p>
                                                 <p><span>6 places</span></p>
 											</div> 
 										</div>
 						  			</div>
-                                     
+
                                       <div class="col-md-6">
 						  				<div class="filtr-item">
 											<img src="assets/images/sweden.jpg" alt="portfolio image"/>
 											<div class="item-title">
-												<a href="#">
-													Scandinavia
-												</a>
+												<a href="#">Scandinavia</a>
 												<p><span>18 tours</span></p>
                                                 <P<<span>12 places</span></p>
 											</div> 
@@ -320,9 +293,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 						  				<div class="filtr-item">
 											<img src="assets/images/newyork.jpg" alt="portfolio image"/>
 											<div class="item-title">
-												<a href="#">
-													New York
-												</a>
+												<a href="#">New York</a>
 												<p><span>10 tours</span></p>
                                                 <p><span>9 places</span></p>
 											</div> 
@@ -333,9 +304,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 						  				<div class="filtr-item">
 											<img src="assets/images/greece1.jpg" alt="portfolio image"/>
 											<div class="item-title">
-												<a href="#">
-													Greece
-												</a>
+												<a href="#">Greece</a>
 												<p><span>8 tours</span></p>
                                                 <P><span>9 places</span></p>
 											</div> 
@@ -346,9 +315,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 						  				<div class="filtr-item">
 											<img src="assets/images/dubai.jpg" alt="portfolio image"/>
 											<div class="item-title">
-												<a href="#">
-													UAE
-												</a>
+												<a href="#">UAE</a>
 												<p><span>18 tours</span></p>
                                                 <p><span>9 places</span></p>
 											</div> 
@@ -424,7 +391,7 @@ Join the millions of travelers who make the most of their vacations through Dest
  </section>
 
     <!---testimony-->
-    <section class="ftco-section testimony-section bg-bottom" style="background-image: url(assets/images/bg_3.jpg);"> 
+<section class="ftco-section testimony-section bg-bottom" style="background-image: url(assets/images/bg_3.jpg);"> 
     <div class="testimonial-section"> 
       <div class="inner-width">
         <h1>What Our Clients Say</h1>
@@ -442,18 +409,12 @@ Join the millions of travelers who make the most of their vacations through Dest
           </div>
 
           <div class="testimonial" id="test-2">
-            <p>Just wanted to say many, many thanks for helping me set up an amazing Costa Rican adventure! My nephew and I had a blast! All of the accommodations were perfect as were the activities that we did (canopy, coffee tour, hikes, fishing, and massages!)
-
-We have such fond memories and can't thank you enough!
-
-you rock! Can't wait to figure out my next adventure!</p>
+            <p>Just wanted to say many, many thanks for helping me set up an amazing Costa Rican adventure! My nephew and I had a blast! All of the accommodations were perfect as were the activities that we did (canopy, coffee tour, hikes, fishing, and massages!)We have such fond memories and can't thank you enough!you rock! Can't wait to figure out my next adventure!</p>
             <span class="description">Kelly / France</span>
           </div>
 
           <div class="testimonial" id="test-3">
-            <p>We would like to thank you for your outstanding service!!  The recent African trip you customized for the Carlstedt's and Tolliver's was amazing!! We can't think of one thing we would have changed on this trip.  We loved the variety of lodgings we stay in and all logistics went according to plan.
-
-We did not have to worry about a thing.  It was a perfect trip that we will always remember as one of our very best!</p>
+            <p>We would like to thank you for your outstanding service!!  The recent African trip you customized for the Carlstedt's and Tolliver's was amazing!! We can't think of one thing we would have changed on this trip.  We loved the variety of lodgings we stay in and all logistics went according to plan.We did not have to worry about a thing.  It was a perfect trip that we will always remember as one of our very best!</p>
             <span class="description">Thomas / Japan</span>
           </div>
 
@@ -464,7 +425,7 @@ We did not have to worry about a thing.  It was a perfect trip that we will alwa
         </div>
       </div>
     </div>
-    </section>
+</section>
     <!--end of testimony-->
 
     <!--footer-->
