--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@
 											<div class="item-title">
 												<a href="#">Scandinavia</a>
 												<p><span>18 tours</span></p>
-                                                <P<<span>12 places</span></p>
-											</div> 
+                                                <P><span>12 places</span></p>
+											
 										</div>
 						  			</div>
 
@@ -486,7 +486,7 @@
           <div class="col-md-12 text-center">
 
             <p>
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  <i class="icon-heart color-danger" aria-hidden="true"></i> </a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  <i class="icon-heart color-danger" aria-hidden="true"></i> 
   </p>
           </div>
         </div>
