--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@
 					</div>
 				</div>
 			</div>
+		</section>
 
 		<!--gallery end-->
     
@@ -513,7 +514,6 @@
   <script src="assets/js/bootstrap-datepicker.js"></script>
   <script src="assets/js/scrollax.min.js"></script>
   <script src="assets/js/google-map.js"></script>
-  <script src="assets/js/main.js"></script>
-    
+  <script src="assets/js/main.js"></script>   
   </body>
 </html>
